using UnityEngine;

public static class NamingUtility
{
    public const string Idle = "Idle";
    public const string Walking = "Walking";
    public const string Running = "Running";
    public const string Slide = "Slide"; 
    public const string Jumped = "Jumped"; 
    public const string DJumped = "DJumped"; 
    public const string Falling = "Falling"; 
    public const string DFalling = "DFalling"; 
    public const string SmallVault = "SmallVault"; 
    public const string LargeVault = "LargeVault"; 
    public const string StepOver = "StepOver";

    public const string Ground = "Ground"; 
    public const string InpX = "InpX"; 
    public const string InpY = "InpY"; 
}